backend/deployment/kubernetes/ingressRouteTraefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: go-infra-route
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`infra.trahan.dev`)
    kind: Rule
    services:
    - name: go-infra-service
      port: 8993
  tls:
    secretName: trahan-dev-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-to-https
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - match: HostRegexp(`{host:.+}`)
    kind: Rule
    services:
    - name: noop
      port: 443
    middlewares:
    - name: redirect-to-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-headers
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Port: "443"
    stsSeconds: 15768000
    forceSTSHeader: true
